Completed Sign Up Page and Fixes in Login Page
Fixes in Login Page: 1) Added Focus Nodes on every text field,  2) init and dispose functions for text controllers and focus nodes as shown in documentation, 3) Added clear icon on e-mail text box, 4) If the keyboard is enabled and the space outside text boxes is tapped, it will be hidden, 5)Icons used instead of images, so some of them will have to be removed later. All the above have been implemented in the signup page as well.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,14 @@ name: stratos_s_application3
 description: A new Flutter project.
 version: 1.0.0+1
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies: 
   flutter: 
     sdk: flutter
   cached_network_image: ^3.3.0
   flutter_svg: ^2.0.9
-  intl: ^0.18.0
+  intl: ^0.19.0
+  enhanced_enum: ^0.2.4
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
