--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter_svg: ^2.0.9
   intl: ^0.19.0
   enhanced_enum: ^0.2.4
+  url_launcher: ^6.2.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
