--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   intl: ^0.19.0
   enhanced_enum: ^0.2.4
   url_launcher: ^6.2.2
+  http: ^0.13.4
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
@@ -48,3 +49,8 @@ flutter:
       fonts: 
         - asset: assets/fonts/CrimsonProRomanBold.ttf
           weight: 700
+
+python:
+  dependencies:
+    mysql-connector-python: ^8.0.28
+    flask: ^2.0.2
