Fixed Desingn in Profile Page and Finished its backend part
Using Shared Preferences to pass the email of the user to the other pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   enhanced_enum: ^0.2.4
   url_launcher: ^6.2.2
   http: ^0.13.4
+  shared_preferences: ^2.2.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
