Found the way to check for new notifications, Added constraints.dart file for changing the ip address and Added notifications and notify_me tables in database
What is left to do is to push a new notification and show the user's notifications history in Notifications Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   url_launcher: ^6.2.2
   http: ^0.13.4
   shared_preferences: ^2.2.2
+  web_socket_channel: ^2.4.0
+  flutter_local_notifications: ^16.3.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
