--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.2.2
   web_socket_channel: ^2.4.0
   flutter_local_notifications: ^16.3.0
+  awesome_notifications: ^0.9.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
