--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   like_button: ^2.0.2
   arcore_flutter_plugin: ^0.1.0
   shared_preferences: ^2.2.2
+  flutter_background_service: ^2.4.6
+  geolocator: ^7.6.0
+  noise_meter: ^3.0.1
   web_socket_channel: ^2.4.0
   flutter_local_notifications: ^16.3.0
   awesome_notifications: ^0.9.2
